--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://dkdlel.github.io/jeju_develop"
+  "homepage": "https://dkdlel.github.io/jeju_develop"
 }
