--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
@@ -22,7 +22,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "regenerator-runtime": "^0.13.7",
-    "swiper": "^6.3.4"
+    "swiper": "^6.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "node-extend": "^0.2.0"
   },
   "homepage": "https://dkdlel.github.io/jeju_develop"
 }
