--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
+    "cross-env": "^7.0.3",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^17.0.0",
@@ -25,7 +26,7 @@
     "swiper": "^6.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env PUBLIC_URL=/ react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
