--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
     "gh-pages": "^3.2.3",
     "node-extend": "^0.2.0"
   },
-  "homepage": "https://dkdlel.github.io/jeju_develop"
+  "homepage": "http://dkdlel.github.io/jeju_develop"
 }
